--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CartasContraBrasil</title>
-    <link rel="stylesheet" href="/cenario.css">
-    <link rel="stylesheet" href="/cenarioCelular.css">
+    <link rel="stylesheet" href="./cenario.css">
+    <link rel="stylesheet" href="./cenarioCelular.css">
 
 </head>
 <body>
