função por na Tela added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CartasContraBrasil</title>
     <link rel="stylesheet" href="./cenario.css">
     <link rel="stylesheet" href="./cenarioCelular.css">
-
+    <script src="./scripts/Main.js" type="Module"></script>
 </head>
 <body>
     <main >
