Co-authored-by: Estêvão Rocha <tetenc555@users.noreply.github.com> Co-authored-by: CauaMoreno <CauaMoreno@users.noreply.github.com> missão criada

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./estilos//Carta.css">
 
     <link rel="stylesheet" href="./cenarioCelular.css">
-    <script src="./scripts/Main.js" type="Module"></script>
+    <script src="./scripts//jsons/Jogo/Jogo.js" type="Module"></script>
 </head>
 <body>
     <main >
