--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 </head>
 <body>
     <main >
-        <div id="alegriaInimigo"></div>
-        <div id="alegriaSua"></div>
+        <div id="alegriaInimigo">
+            <progress id="progressoAlegriaInimigo" max="10" value="0"></progress>
+
+        </div>
+        <div id="alegriaSua">
+            <progress id="progressoAlegriaSua" max="10" value="0"></progress>
+        </div>
 
         <div id="mesaCartas"></div>
         <div id="inimigo"></div>
