--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>CartasContraBrasil</title>
     <link rel="stylesheet" href="./cenario.css">
     <link rel="stylesheet" href="./estilos//Carta.css">
+    <link rel="stylesheet" href="./estilos/Mapa.css">
 
     <link rel="stylesheet" href="./cenarioCelular.css">
     <script src="./scripts//jsons/Jogo/Jogo.js" type="Module"></script>
 </head>
 <body>
-    <main >
+    <main id="main" >
         <div id="alegriaInimigo">
             <progress id="progressoAlegriaInimigo" max="10" value="0"></progress>
 
