Co-authored-by: Estêvão Rocha <tetenc555@users.noreply.github.com> Co-authored-by: CauaMoreno <CauaMoreno@users.noreply.github.com> mapa  funcionando

--- a/index.html
+++ b/index.html
@@ -11,19 +11,7 @@
     <link rel="stylesheet" href="./cenarioCelular.css">
     <script src="./scripts//jsons/Jogo/Jogo.js" type="Module"></script>
 </head>
-<body>
-    <main id="main" >
-        <div id="alegriaInimigo">
-            <progress id="progressoAlegriaInimigo" max="10" value="0"></progress>
-
-        </div>
-        <div id="alegriaSua">
-            <progress id="progressoAlegriaSua" max="10" value="0"></progress>
-        </div>
-
-        <div id="mesaCartas"></div>
-        <div id="inimigo"></div>
-
-    </main>
+<body id="body">
+    
 </body>
 </html>
