--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CartasContraBrasil</title>
     <link rel="stylesheet" href="./cenario.css">
-    <link rel="stylesheet" href="./estilos//Carta.css">
+    <link rel="stylesheet" href="./estilos/Carta.css">
     <link rel="stylesheet" href="./estilos/Mapa.css">
 
     <link rel="stylesheet" href="./cenarioCelular.css">
