cria paginas e redirecionamento

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CartasContraBrasil</title>
-    <link rel="stylesheet" href="./estilos/Resultado.css">
-    <link rel="stylesheet" href=".//estilos/cenario.css">
-    <link rel="stylesheet" href="./estilos/Carta.css">
-    <link rel="stylesheet" href="./estilos/Mapa.css">
-
-    <script src="./scripts//jsons/Jogo/Jogo.js" type="Module"></script>
+    <title>Nome do Jogo Agui >:3</title>
 </head>
-<body id="body">
-    
+<body>
+    <main>
+        <h1>Nome do Jogo Agui >:3</h1>
+        <a href="jogo.html"><button>Jogar</button></a>
+        <a href="sobrejogo.html"><button>Sobre o Jogo</button></a>
+    </main>
 </body>
 </html>
