finaliza texto da pagina de sobre

--- a/sobrejogo.html
+++ b/sobrejogo.html
@@ -8,8 +8,63 @@
 <body>
     <main>
         <h1>Sinopse</h1>
-        <p>O … é um jogo de piadas do tema “Faça me rir” desenvolvido na Global Game Jam 2024 na UFJF. Nessa gameplay, você busca ser o maior comediante de todos! Para isso, você enfrenta pessoas de diversos esteriótipos brasileiros, aperfeiçoando suas piadas e buscando a risada universal!</p>
+        <p>O … é um jogo de piadas do tema “Faça me rir” desenvolvido na Global Game Jam 2024 na UFJF.</p>
+        <p>Nessa gameplay, você busca ser o maior comediante de todos! Para isso, você enfrenta pessoas de diversos esteriótipos brasileiros, aperfeiçoando suas piadas e buscando a risada universal!</p>
+        <h2>Como jogar</h2>
+        <ol>
+            <!-- Colocar negrito</!-->
+            <li>Ao iniciar o jogo, você escolhe sua plateia no menu. Ao iniciar o combate, você pode ver a barra de “Graça” do inimigo e a sua vida. O objetivo para vencer é fazer cada personagem te achar engraçado, antes de ser cancelado! Caso você seja cancelado, você terá que reiniciar toda sua jornada!</li>
+            <li>A cada turno, você ganhará 2 cartas, devendo escolher a carta que achar mais efetiva. Nesse sentido, atente-se aos 3 tipos de efetividade presentes no jogo:</li>
+            <table>
+                <tr id="titulo tabela">
+                    <th>Tipo</th>
+                    <th>Características</th>
+                </tr>
+                <tr>
+                    <th>Carta Efetiva</th>
+                    <th>Essa carta é a melhor, pois o inimigo ganha dois pontos de GRAÇA e você não perde nenhum ponto de vida!</th>
+                </tr>
+                <tr>
+                    <th>Carta Inefetiva</th>
+                    <th>Cuidado! Essa é exatamente o contrário da efetiva, pois, além de o inimigo não achar graça, você se sente envergonhado e perde dois pontos de vida.</th>
+                </tr>
+                <tr>
+                    <th>Carta Neutra</th>
+                    <th>Essa carta é mediana, ou seja, você perde um ponto de vida mas o inimigo também ganha 1 ponto de GRAÇA.</th>
+                </tr>
+            </table>
+        </ol>
+        <h3>Créditos</h3>
+        <p>História e piadas</p>
+        <ol>
+            <li>Cauã Moreno</li>
+            <li>Emerson Caneschi</li>
+            <li>Estêvão Fiorilo</li>
+            <li>Eyshila Santos</li>
+            <li>Miguel Dias</li>
+        </ol>
+        <p>Desing, Desenho e Animação</p>
+        <ol>
+            <li>Emerson Caneschi</li>
+            <li>Eyshila Santos</li>
+        </ol>
+        <p>Programação</p>
+        <ol>
+            <li>Cauã Moreno</li>
+            <li>Estêvão Fiorilo</li>
+            <li>Miguel Dias</li>
+        </ol>
+        <p>Composição Musical</p>
+        <ol>
+            <li>Cauã Moreno</li>
+        </ol>
+
+        <p>
+            Agradecemos também ao suporte oferecido no laboratório e no Discord da Jam, em especial a outros participantes e aos professores que tornaram essa experiencia muito mais divertida e facilitada!</p>
         
+        <a href="index.html"><button>Voltar ao Menu</button></a>
+        <a href="jogo.html"><button>Jogar</button></a>
+        <!-- Feito em 48 horas Jesus Cristo estamos mortos (mas passamos bem) </!-->
     </main>
 </body>
 </html>
