--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <main>
         <h1>Nome do Jogo Agui >:3</h1>
-        <a href="jogo.html"><button>Jogar</button></a>
-        <a href="sobrejogo.html"><button>Sobre o Jogo</button></a>
+        <section>
+            <a href="jogo.html"><button>Jogar</button></a>
+            <a href="sobrejogo.html"><button>Sobre o Jogo</button></a>
+        </section>        
     </main>
 </body>
 </html>
