Co-authored-by: Estêvão Rocha <tetenc555@users.noreply.github.com> Co-authored-by: CauaMoreno <CauaMoreno@users.noreply.github.com> ultima commit

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome do Jogo Agui >:3</title>
-    <link rel="stylesheet" href="./estilos/menuprincipal.css">
+    <title>Ofensa em Cartas</title>
+    <link rel="stylesheet" href="./estilos/Menu.css">
 </head>
 <body>
     <main>
-        <h1>Nome do Jogo Agui >:3</h1>
+        <h1>Ofensa em Cartas</h1>
         <section>
             <a href="jogo.html"><button>Jogar</button></a>
             <a href="sobrejogo.html"><button>Sobre o Jogo</button></a>
