--- a/jogo.html
+++ b/jogo.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CartasContraBrasil</title>
+    <title>Jogando Ofensa em Cartas</title>
     <link rel="stylesheet" href="./estilos/Resultado.css">
     <link rel="stylesheet" href=".//estilos/cenario.css">
     <link rel="stylesheet" href="./estilos/Carta.css">
     <link rel="stylesheet" href="./estilos/Mapa.css">
+
+    
+    <link rel="prefetch" href="./assets/GenZ/sprite/s0.png">
+    <link rel="prefetch" href="./assets/GenZ/sprite/s1.png">
+    <link rel="prefetch" href="./assets/GenZ/sprite/s2.png">
+    <link rel="prefetch" href="./assets/GenZ/sprite/s3.png">
+    <link rel="prefetch" href="./assets/Militar/sprite/s0.png">
+    <link rel="prefetch" href="./assets/Militar/sprite/s1.png">
+    <link rel="prefetch" href="./assets/Militar/sprite/s2.png">
+    <link rel="prefetch" href="./assets/Militar/sprite/s3.png">
+    <link rel="prefetch" href="./assets/Idosa//fundo.png">
+
+    <link rel="prefetch" href="./assets/Idosa/sprite/s0.png">
+    <link rel="prefetch" href="./assets/Idosa/sprite/s1.png">
+    <link rel="prefetch" href="./assets/Idosa/sprite/s2.png">
+    <link rel="prefetch" href="./assets/Idosa/sprite/s3.png">
+
+
+
 
     <script src="./scripts//jsons/Jogo/Jogo.js" type="Module"></script>
 </head>
