--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <main>
         <h1>Ofensa em Cartas</h1>
         <section>
-            <a href="jogo.html"><button>Jogar</button></a>
+            <a href="https://github.com/Miguel-Dias-112/Ofensa-em-Cartas/releases/download/untagged-4d2bc79a803760a8b1b1/ofensa-em-cartas-1.0.0.AppImage"><button>Windows Download</button></a>
+            <a href="https://github.com/Miguel-Dias-112/Ofensa-em-Cartas/releases/download/untagged-4d2bc79a803760a8b1b1/OfensaEmCartas.windows.zip"><button>Linux Download</button></a>
+            
             <a href="sobrejogo.html"><button>Sobre o Jogo</button></a>
+            
         </section>        
     </main>
 </body>
